Add user-visible name to the action collection.

BUG: 259870
CCMAIL: kde@michael-jansen.biz